<resources>
    <string name="app_name">hw_2_layouts</string>
    <string name="app_name_poi">POI</string>
    <string name="text_folder">Attractions</string>
    <string name="text_dining">Dining</string>
    <string name="text_edu">Education</string>
    <string name="text_people">Family</string>
    <string name="text_health">Health</string>
    <string name="text_office">Office</string>
    <string name="text_promotion">Promotions</string>
    <string name="text_radio">Radio</string>
    <string name="text_recipes">Recipes</string>
    <string name="text_sport">Sports</string>
    <string name="text_photo">Photo</string>
    <string name="img_camera">Camera</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="inventory">Inventory</string>
    <string name="weight">Weight</string>
    <string name="sign_in">Sign in</string>
    <string name="text_button">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="checkbox_text">Remember</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="just_sign_in">* Just sign in</string>
    <string name="android">Android</string>
    <string name="text_posts">125</string>
    <string name="title_posts">Posts</string>
    <string name="text_followers">20K</string>
    <string name="title_followers">Followers</string>
    <string name="text_following">22</string>
    <string name="title_following">Following</string>
    <string name="username">Username</string>
    <string name="photo">Photo</string>
    <string name="address">Address</string>
    <string name="directions">directions</string>
    <string name="call">call</string>
    <string name="save">save</string>
    <string name="website">website</string>
    <string name="line">Line</string>
    <string name="certificated">Certificated</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="layouts">Layouts</string>
    <string name="views">Views</string>
</resources>