<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_photo"
        android:textSize="72sp"
        android:textColor="@color/colorBlack"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:background="@color/colorLightGray"
        android:padding="70dp"
        android:layout_alignParentTop="true"/>

    <ImageButton
        android:id="@+id/camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_photo_camera_24"
        android:padding="16dp"
        android:background="@color/colorLightGray"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/img_camera"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@id/photo"/>

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/title"
        android:autofillHints="@string/title"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/photo"/>

    <EditText
        android:id="@+id/price"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/price"
        android:autofillHints="@string/price"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/title"/>

    <EditText
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/location"
        android:autofillHints="@string/location"
        android:drawableEnd="@drawable/ic_baseline_location_on_24"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/title"
        android:layout_toEndOf="@id/price"/>

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/description"
        android:autofillHints="@string/description"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/price"/>

    <EditText
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/inventory"
        android:autofillHints="@string/inventory"
        android:layout_gravity="start"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/description"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/weight"
        android:autofillHints="@string/weight"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/description"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>