<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_photo"
            android:textSize="72sp"
            android:textColor="@color/colorBlack"
            android:textAllCaps="true"
            android:background="@color/colorLightGray"
            android:gravity="center"
            android:padding="70dp"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_photo_camera_24"
            android:padding="16dp"
            android:background="@color/colorLightGray"
            android:layout_gravity="bottom|end"
            android:contentDescription="@string/img_camera"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="30dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/title"
            android:autofillHints="@string/title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text"
                android:hint="@string/price"
                android:autofillHints="@string/price"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="text"
                android:hint="@string/location"
                android:autofillHints="@string/location"
                android:drawableEnd="@drawable/ic_baseline_location_on_24"/>

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/description"
            android:autofillHints="@string/description"
            android:layout_marginTop="30dp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <EditText
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/inventory"
                android:autofillHints="@string/inventory"
                android:layout_gravity="start"/>

            <EditText
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/weight"
                android:autofillHints="@string/weight"
                android:layout_gravity="end"/>

        </FrameLayout>

    </LinearLayout>

</LinearLayout>