<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="50dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/sign_in"
        android:textColor="@color/colorBlack"
        android:textSize="26sp"
        android:layout_alignParentTop="true"/>

    <EditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="26sp"
        android:background="@drawable/border"
        android:paddingStart="25dp"
        android:paddingEnd="0dp"
        android:paddingVertical="13dp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/title"/>

    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:autofillHints="@string/password"
        android:textSize="26sp"
        android:background="@drawable/border"
        android:paddingStart="25dp"
        android:paddingEnd="0dp"
        android:paddingVertical="13dp"
        android:layout_marginTop="15dp"
        android:layout_below="@id/input_email"/>

    <CheckBox
        android:id="@+id/checkbox_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_text"
        android:checked="true"
        android:textStyle="bold"
        android:textSize="18sp"
        android:paddingStart="13dp"
        android:paddingEnd="0dp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/input_password"/>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:gravity="end"
        android:layout_below="@id/input_password"
        android:layout_alignBaseline="@id/checkbox_remember"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:text="@string/text_button"
        android:textAllCaps="false"
        android:background="@drawable/button_radius"
        android:textColor="@color/colorWhite"
        android:textSize="26sp"
        android:paddingVertical="13dp"
        android:layout_below="@id/checkbox_remember"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/just_sign_in"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="70dp"
        android:layout_below="@id/button"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>