<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/android"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/main_photo"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:src="@drawable/square"
            android:contentDescription="@string/photo"/>

        <LinearLayout
            android:id="@+id/posts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center_horizontal">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_posts"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_posts"
                android:textColor="@color/colorBlack"/>
            
        </LinearLayout>

        <LinearLayout
            android:id="@+id/followers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_followers"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_followers"
                android:textColor="@color/colorBlack"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/following"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_following"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_following"
                android:textColor="@color/colorBlack"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="18sp"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="16sp"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="16sp"
        android:textColor="@color/colorBlack"/>

    <LinearLayout
        android:id="@+id/image_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/img1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/square"
            android:contentDescription="@string/photo"/>

        <ImageView
            android:id="@+id/img2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/square"
            android:contentDescription="@string/photo"
            android:layout_marginStart="15dp"/>

        <ImageView
            android:id="@+id/img3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/square"
            android:contentDescription="@string/photo"
            android:layout_marginStart="15dp"/>

        <ImageView
            android:id="@+id/img4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/square"
            android:contentDescription="@string/photo"
            android:layout_marginStart="15dp"/>

        <ImageView
            android:id="@+id/img5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/square"
            android:contentDescription="@string/photo"
            android:layout_marginStart="15dp"/>

        <ImageView
            android:id="@+id/img6"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:contentDescription="@string/photo"
            android:src="@drawable/square" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/button_direction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorTransparent"
            android:drawableTop="@drawable/ic_baseline_directions_24"
            android:text="@string/directions"
            android:textColor="@color/colorBlue"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/button_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorTransparent"
            android:drawableTop="@drawable/ic_baseline_call_24"
            android:text="@string/call"
            android:textColor="@color/colorBlue"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorTransparent"
            android:drawableTop="@drawable/ic_baseline_star_24"
            android:text="@string/save"
            android:textColor="@color/colorBlue"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/button_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorTransparent"
            android:drawableTop="@drawable/ic_baseline_link_24"
            android:text="@string/website"
            android:textColor="@color/colorBlue"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorLightGray"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/line" />

    <LinearLayout
        android:id="@+id/photos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <ImageView
            android:id="@+id/photo1"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:src="@drawable/square"
            android:contentDescription="@string/photo"/>

        <ImageView
            android:id="@+id/photo2"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:src="@drawable/square"
            android:contentDescription="@string/photo"
            android:layout_marginStart="13dp"/>

        <ImageView
            android:id="@+id/photo3"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:src="@drawable/square"
            android:contentDescription="@string/photo"
            android:layout_marginStart="13dp"/>

    </LinearLayout>

</LinearLayout>